# mixtapematrix

./: .gitignore  CHANGELOG.md  README.md  matrix.yaml.example  pyproject.toml  router.yaml
.github/workflows/: ci.yaml
mixtapematrix/: config.py  main.py
mixtapematrix/routers/: files.py  mp3_router.py
test/: conftest.py  invalid.yaml  matrix.yaml  router.yaml  test_main.py  test_routers.py
