[project]
name = "mixtapematrix"
version = "1.1.0"
description = "Declarative MP3 File Management for passionate listeners."
authors = [{ name = "Karl Dreher" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "pydantic>=2.9.0,<3",
    "pyyaml>=6.0.2,<7",
    "eyed3>=0.9.7,<0.10",
    "click>=8.1.8,<9",
]

[project.scripts]
mixtapematrix = "mixtapematrix.main:cli"
mmatrix = "mixtapematrix.main:cli"

[dependency-groups]
dev = [
    "ruff>=0.6.4,<0.7",
    "pytest>=8.3.4,<9",
]
release = ["python-semantic-release>=9.16.1,<10"]

[tool.uv]
default-groups = [
    "dev",
    "release",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-v"

[tool.semantic_release]
version_variables = ["mixtapematrix/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.branches.preview]
# this is only here to get previews of release bumps
match = ".+"

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

